# agv_system

./: .gitignore  README.md
car/: .gitignore  README.md  platformio.ini
car/include/: config.h  credentials.example.h  drive.h  encoder.h  key.h  mqtt_handler.h  vision.h
car/src/: drive.cpp  encoder.cpp  esp32.code-workspace  key.cpp  main.cpp  mqtt_handler.cpp  vision.cpp
host/: .gitignore
host/master/: CMakeLists.txt  README.md  mqtt-api.md  system-api.md
host/master/include/agv/: log_msg.h  mq_msg.h
host/master/include/config/: config.h
host/master/lib/: CMakeLists.txt
host/master/lib/ipc/: mq_wrapper.h  secure_exit.h  seqlock.h  shm_layout.h  shm_manager.h  signal_handler.h
host/master/lib/logger/: CMakeLists.txt  logger.cpp  logger.h
host/master/lib/timer/: timer_fd.cpp  timer_fd.h
host/master/scripts/: FastCGI启动程序.sh  log查看.md  nginx文件配置.txt  空工程示例.cpp
host/master/scripts/systemd/: README.md  agv-http-status.service  agv-http-task.service  agv-http-topo.service  agv-log-daemon.service  agv-model-manager.service  agv-mqtt-publisher.service  agv-mqtt-subscriber.service  agv-planner.service  agv-router.service  agv.target
host/master/src/: CMakeLists.txt
host/master/src/http_service/: CMakeLists.txt  Status.cpp  Task.cpp  Topo.cpp  fcgi_utils.h
host/master/src/log_daemon/: CMakeLists.txt  main.cpp
host/master/src/model_manager/: CMakeLists.txt  model_manager.cpp
host/master/src/mqtt_service/: CMakeLists.txt  mqtt_client.h  mqtt_publisher.cpp  mqtt_subscriber.cpp
host/master/src/planner/: CMakeLists.txt  planner.cpp  planner.h
host/master/src/router/: CMakeLists.txt  router.cpp  router.h
host/master/tests/: CMakeLists.txt  inject_log.cpp  reset_shm.cpp  test_1_http.cpp  test_logger.cpp  test_mq_inject.cpp  test_mq_mqtt.cpp  test_secureExit.cpp  test_shm.cpp  test_shm_read_print  test_shm_read_print.cpp  test_timer_fd.cpp  test_tmp.cpp
host/master/tests/mq/: CMakeLists.txt  test_mq1.cpp  test_mq2.cpp
host/web/: agv_api.md  index.html
